[project]
name = "hes-xplain-github-io"
version = "0.0.0"
description = "Website for MLxplain"
authors = [
    { name = "Rémy Marquis", email = "remy.marquis@heig-vd.ch" },
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" },
    { name = "Jean-Marc Boutay", email = "jean-marc.boutay@hesge.ch" },
]
dependencies = [
    "mkdocs-material>=9.5.2",
    "pillow>=10.1.0",
    "cairosvg>=2.7.1",
    "mkdocs-minify-plugin>=0.7.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-glightbox>=0.3.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "hes-xplain-github-io:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hes_xplain_github_io"]
