[project]
name = "hes-xplain-github-io"
version = "0.0.1"
description = "Website for MLxplain"
authors = [
    { name = "Rémy Marquis", email = "remy.marquis@heig-vd.ch" },
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" },
    { name = "Jean-Marc Boutay", email = "jean-marc.boutay@hesge.ch" },
]
dependencies = [
    "mkdocs-material>=9.5.25",
    "pillow>=10.3.0",
    "cairosvg>=2.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-glightbox>=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true
